Add client list

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,11 @@ title: Uncommon
 <%= partial "helping/client_summary", locals: {client: "groupon"} %>
 <%= partial "helping/client_summary", locals: {client: "fisdom"} %>
 
+<section class="client-list">
+  <%= client_list %>
+</section>
+
 <section class="container about">
   <%= partial "text/about.html.markdown" %>
 </section>
+
