--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,6 +13,7 @@
 @import "components/article_list";
 @import "components/screens";
 @import "components/case_studies";
+@import "components/client_list";
 
 @import "pages/home";
 
