--- a/source/stylesheets/components/_client_list.scss
+++ b/source/stylesheets/components/_client_list.scss
@@ -1,3 +1,43 @@
 .client-list {
-  border-top: solid 1px rgba($black, 0.15); 
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  background: #000;
+
+  ul {
+    margin: 10px;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  &-item {
+    display: block;
+    position: relative;
+    width: 160px;
+    height: 160px;
+    float: left;
+    margin: 10px;
+    font-size: 0;
+    overflow: hidden;
+    line-height: 0;
+    border: solid 1px #111;
+
+    img {
+      display: block;
+      position: absolute;
+      left: 10%;
+      top: 10%;
+      width: 80%;
+    }
+
+    a {
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+    }
+  }
 }
