--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -57,7 +57,7 @@ body.index {
     margin-bottom: 60px;
     padding: 10vw 10vw 36vw 10vw;
 
-    border-top: solid 1px rgba($black, 0.15);
+    // border-top: solid 1px rgba($black, 0.15);
     background: transparent image-url("about/team.jpg") no-repeat bottom center;
     background-size: 100% auto;
 
