--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,7 +16,7 @@ title: Uncommon
 <%= partial "helping/client_summary", locals: {client: "fisdom"} %>
 
 <section class="client-list">
-  <h2>clients</h2>
+  <h2>Clients</h2>
   <%= client_list %>
 </section>
 
