Add a page listing the services provided by the Web team
This is going to be a temporary page until the new website
goes live.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -16,6 +16,7 @@
 @import "components/client_list";
 
 @import "pages/home";
+@import "pages/services";
 
 // @import "components/screen_list";
 // @import "components/screen_slideshow";
