--- a/source/services/web.html.erb
+++ b/source/services/web.html.erb
@@ -7,47 +7,58 @@ title: Web Engineering at Uncommon
 <main class="services-section">
     <section class="container article-section article-metadata">
         <div class="content">
-            <h1>Web Engineering at Uncommon</h1>
-
+            <h1>Web Engineering Team Services</h1>
+            
             <p>Having worked with everything from jQuery to Backbone.js to modern-day React and Angular, our Web Engineering team has over a decade and a half of experience building beautiful, fast, and responsive browser apps.</p>
 
             <h2>Single Page Apps</h2>
+            <p>Whether you’re looking to build slick e-commerce experiences, user-friendly SaaS products, visualisations for large datasets, or compelling narratives using data and interactivity, we’ve got you covered. We can help you build single-page Web apps that work beautifully across browsers, devices, and operating systems.</p>
 
-            <p>Whether you’re building slick e-commerce experiences, user-friendly SaaS products, visualisations for large datasets, or breaking compelling stories using data and interactivity, we’ve got you covered.</p>
-
-            <p>To deliver these high-quality experiences on the Web, we use React as our view library. We pair it with a selection of high-quality libraries from the burgeoning front-end ecosystem, including a robust state management library such as Redux or MobX.</p>
+            <p>To deliver these high-quality experiences on the Web, we primarily use React as our view layer. We pair it with a selection of high-quality libraries from the burgeoning front-end ecosystem, including a robust state management package such as Redux or MobX.</p>
 
             <p>We’re deeply familiar with our tooling, which includes Babel, Webpack, TypeScript, Jest, and ESLint. Our tools, combined with our knowledge of software engineering principles, allow us to deliver apps that are well tested, maintainable, extensible, and follow modern best practices.</p>
 
             <p>We build apps that load fast and are a pleasure to use across a range of devices and network connections — from high-end MacBooks connected to fast WiFi networks, to low-end Android phones with slow CPUs and flaky 3G connections. We do this so your product can reach the widest possible audience across the planet.</p>
 
-            <p>We’ve helped clients such as Insider.in, Adiya Birla Online Fashion, Pratham Books, Adya and Cognitive Match build applications that their users love and use every day.</p>
+            <p>We’ve helped clients such as <a href="https://insider.in">Insider</a>, <a href="https://www.abof.com">Adiya Birla Online Fashion</a>, <a href="https://storyweaver.org.in">Pratham Books</a>, <a href="https://adya.io">Adya</a> and Cognitive Match build applications that their users love and use every day.</p>
 
             <h2>Progressive Web Apps</h2>
+            <p>Progressive Web Apps (PWAs) are Web applications that look and feel just like native applications. They can be installed to your users’ home screens, work offline, send push notifications, and have privileged access to certain APIs.</p>
 
-            <p>We can super-charge your web experiences by helping you build Progressive Web Apps (PWAs), or by helping you upgrade your existing Web apps to PWAs.</p>
+            <p>PWAs are a great alternative to native mobile apps, since they can be built once and run on every platform that has a modern Web browser. They give your users a near-native experience at less than half the cost of building native apps for all the major mobile platforms.</p>
 
-            <p>We’ve built PWAs for our clients to satisfy a variety of business goals: enabling new kinds of offline experiences, improving load times for existing applications, or increasing engagement by allowing users to install Web apps to their phone’s home screens.</p>
+            <p>We can super-charge your web experiences by helping you design and build PWAs, or by helping you upgrade your existing Web apps to PWAs.</p>
 
-            <p>Two examples of our work in this area are Insider.in and StoryWeaver by Pratham Books.</p>
+            <p>We’ve built Progressive Web Apps for our clients to satisfy a variety of business goals: whether it’s enabling new kinds of offline experiences, improving load times for existing applications, or increasing engagement by allowing users to install Web apps to their phone’s home screens.</p>
+
+            <p>An example of an offline experience that we built is <a href="https://storyweaver.org.in">StoryWeaver</a> by <a href="http://prathambooks.org">Pratham Books</a>.</p>
 
             <h2>Design Systems</h2>
-
             <p>Having an extensible, reusable design system for your company or product can make all the difference when it comes to rapidly delivering new features in an ever-changing market.</p>
 
-            <p>We can help you build reusable UI components with plain old HTML and CSS, or with a framework of your choice. Our components are modular, reusable, and well documented, which means developers and designers of all skill levels can combine them together to build new experiences. If we’re working with React, we can even deliver the design system as a set of components that work well with React Storybook.</p>
+            <p>We can help you build reusable UI components with plain old HTML and CSS, or with a framework of your choice. Our components are modular, reusable, and well documented, which means developers and designers of all skill levels can combine them together to build new experiences. If we’re working with React, we can even deliver design systems as a set of components that work well with React Storybook.</p>
 
-            <p>In the past, we’ve helped Karnataka Learning Partnership build a design system that is used across their Web properties.</p>
+            <p>In the past, we’ve helped <a href="https://klp.org.in/">Karnataka Learning Partnership</a> build a design system that is used across all their Web properties.</p>
 
             <h2>Web Performance Optimization</h2>
+            <p>If you are an online business, your conversion rate is directly linked to how fast your website loads and how fast users can navigate through it thereafter. Every additional second of delay in load time can cause 10% of your users to give up and close your page, negatively affecting your sales (<a href="https://www.creativebloq.com/features/how-the-bbc-builds-websites-that-scale">source</a>).</p>
 
-            <p>If you are an online business, your conversion rates are directly linked to how fast your website loads and how fast users can navigate through it thereafter. Every additional second of delay in load time can cause 10% of your users to give up and close your page, negatively affecting your sales.</p>
+            <p>Our team has experience profiling and diagnosing performance issues on content-focused websites as well as JavaScript-heavy Web apps built with modern frameworks. We can help you interpret scores produced by WebPageTest and Lighthouse, and apply fixes to your code in order to bring them up to recommended standards. We’re also adept at interpreting data from the Google Chrome CPU and memory profilers, and using it to pinpoint problem areas in your app’s codebase.</p>
 
-            <p>Our team has experience profiling and diagnosing performance issues on content-focused websites as well as JavaScript-heavy Web apps built with modern frameworks. We can help you interpret the WebPageTest and Lighthouse scores for your apps, and apply fixes in order to bring them up to recommended standards. We’re also adept at interpreting data from the Chrome CPU and memory profilers, and using it to pinpoint problem areas in your app’s codebase.</p>
+            <p>We can even review your codebase and build pipelines in detail in order to discover insidious performance killers that are frustrating your users and causing conversion rates to drop.</p>
 
-            <p>We can review your codebase and JavaScript build pipelines in order to discover performance killers.</p>
+            <p>In the past, we’ve worked with <a href="https://www.abof.com">Aditya Birla Online Fashion</a>, <a href="https://insider.in">Insider</a>, and <a href="https://quintype.com">Quintype</a> to help them optimise their Web properties.</p>
+            
+            <h2>The Obvious Bits</h2>
+            <p>We believe that code is primarily a means of communication between humans, and to that end we make sure what we hand over to our clients is clear and comprehensible to developers of all skill levels. Our code is well-tested and follows modern best practices prevalent in the wider front-end development community, and we use tools such as ESLint and Prettier to make sure all of it conforms to a uniform style.</p>
 
-            <p>In the past, we’ve worked with Aditya Birla Online Fashion, Insider, and Quintype in order to help them optimise their Web properties.</p>
+            <p>We believe in mobile-first development, which means all our user interfaces are responsive and retain the same level of polish on all screen sizes, all the way from tiny mobile screens to large televisions.</p>
+
+            <p>We believe content and applications built on Web technologies should be accessible to all human beings. We regularly test our applications on low-end devices under flaky network conditions to make sure they perform well even in the harsh conditions common in developing economies such as India.</p>
+
+            <p>We are familiar with the WAI-ARIA guidelines for accessibility, which means we can ensure that people using assistive technologies such as screen readers are not excluded from using your product.</p>
+
+            <p>We believe in an open, democratic, and inclusive Web that provides equal access to information and computing power to all human beings, and we regularly ensure that the products we build meet these standards.</p>
         </div>
     </section>
 </main>
